<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:orientation="vertical"
    tools:context=".activity.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/main_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/home_background"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/text_view_login"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/top_background_image"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp" />

                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_4sdp"
                    app:srcCompat="@drawable/profile" />

                <EditText
                    android:id="@+id/profile_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hintColor"
                    android:textSize="@dimen/_14ssp" />

                <EditText
                    android:id="@+id/profile_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:hint="@string/number"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hintColor"
                    android:textSize="@dimen/_14ssp" />


                <EditText
                    android:id="@+id/profile_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@drawable/edit_text_background"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/hintColor"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/update_profile_btn"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/carter_one"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/update_profile"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@drawable/textview_background"
                    android:fontFamily="@font/carter_one"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/others_settings"
                    android:textColor="@color/progressBarColor"
                    android:textSize="@dimen/_14ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/withdraw_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:fontFamily="@font/carter_one"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/withdraw"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/change_language_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:fontFamily="@font/carter_one"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/change_language"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/prvicy_policy_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:fontFamily="@font/carter_one"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/privacy_policy"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/term_and_condition_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_background"
                        android:fontFamily="@font/carter_one"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/term"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10ssp" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>